--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,97 @@
-.pixel { position: absolute; outline: 1px solid; }
+.pixel {
+	position: absolute;
+	outline: 1px solid;
+	transition: opacity 5s linear;
+	opacity: 1;
+	-webkit-animation-duration: 1s;
+	-webkit-animation-name: fadein;
+}
 
-.black { background-color: black; outline-color: black; }
-.red   { background-color: red; outline-color: red; }
+.black {
+	background-color: black;
+	outline-color: black;
+}
+.red   {
+	background-color: red;
+	outline-color: red;
+}
+
+/* 0 */
+.row0.col0 { -webkit-animation-delay: 0.00s; }
+/* 1 */
+.row0.col1, .row1.col0 { -webkit-animation-delay: 0.05s; }
+/* 2 */
+.row0.col2, .row1.col1, .row2.col0 { -webkit-animation-delay: 0.10s; }
+/* 3 */
+.row0.col3, .row1.col2, .row2.col1, .row3.col0 { -webkit-animation-delay: 0.15s; }
+/* 4 */
+.row0.col4, .row1.col3, .row2.col2, .row3.col1, .row4.col0 { -webkit-animation-delay: 0.20s; }
+/* 5 */
+.row0.col5, .row1.col4, .row2.col3, .row3.col2, .row4.col1, .row5.col0 { -webkit-animation-delay: 0.25s; }
+/* 6 */
+.row0.col6, .row1.col5, .row2.col4, .row3.col3, .row4.col2, .row5.col1 { -webkit-animation-delay: 0.30s; }
+/* 7 */
+.row0.col7, .row1.col6, .row2.col5, .row3.col4, .row4.col3, .row5.col2 { -webkit-animation-delay: 0.35s; }
+/* 8 */
+.row0.col8, .row1.col7, .row2.col6, .row3.col5, .row4.col4, .row5.col3 { -webkit-animation-delay: 0.40s; }
+/* 9 */
+.row0.col9, .row1.col8, .row2.col7, .row3.col6, .row4.col5, .row5.col4 { -webkit-animation-delay: 0.45s; }
+/* 10 */
+.row0.col10, .row1.col9, .row2.col8, .row3.col7, .row4.col6, .row5.col5 { -webkit-animation-delay: 0.50s; }
+/* 11 */
+.row0.col11, .row1.col10, .row2.col9, .row3.col8, .row4.col7, .row5.col6 { -webkit-animation-delay: 0.55s; }
+/* 12 */
+.row0.col12, .row1.col11, .row2.col10, .row3.col9, .row4.col8, .row5.col7 { -webkit-animation-delay: 0.60s; }
+/* 13 */
+.row0.col13, .row1.col12, .row2.col11, .row3.col10, .row4.col9, .row5.col8 { -webkit-animation-delay: 0.65s; }
+/* 14 */
+.row0.col14, .row1.col13, .row2.col12, .row3.col11, .row4.col10, .row5.col9 { -webkit-animation-delay: 0.70s; }
+/* 15 */
+.row0.col15, .row1.col14, .row2.col13, .row3.col12, .row4.col11, .row5.col10 { -webkit-animation-delay: 0.75s; }
+/* 16 */
+.row0.col16, .row1.col15, .row2.col14, .row3.col13, .row4.col12, .row5.col11 { -webkit-animation-delay: 0.80s; }
+/* 17 */
+.row0.col17, .row1.col16, .row2.col15, .row3.col14, .row4.col13, .row5.col12 { -webkit-animation-delay: 0.85s; }
+/* 18 */
+.row0.col18, .row1.col17, .row2.col16, .row3.col15, .row4.col14, .row5.col13 { -webkit-animation-delay: 0.90s; }
+/* 19 */
+.row0.col19, .row1.col18, .row2.col17, .row3.col16, .row4.col15, .row5.col14 { -webkit-animation-delay: 0.95s; }
+/* 20 */
+.row0.col20, .row1.col19, .row2.col18, .row3.col17, .row4.col16, .row5.col15 { -webkit-animation-delay: 1.00s; }
+/* 21 */
+.row0.col21, .row1.col20, .row2.col19, .row3.col18, .row4.col17, .row5.col16 { -webkit-animation-delay: 1.05s; }
+/* 22 */
+.row0.col22, .row1.col21, .row2.col20, .row3.col19, .row4.col18, .row5.col17 { -webkit-animation-delay: 1.10s; }
+/* 23 */
+.row0.col23, .row1.col22, .row2.col21, .row3.col20, .row4.col19, .row5.col18 { -webkit-animation-delay: 1.15s; }
+/* 24 */
+.row0.col24, .row1.col23, .row2.col22, .row3.col21, .row4.col20, .row5.col19 { -webkit-animation-delay: 1.20s; }
+/* 25 */
+.row0.col25, .row1.col24, .row2.col23, .row3.col22, .row4.col21, .row5.col20 { -webkit-animation-delay: 1.25s; }
+/* 26 */
+.row0.col26, .row1.col25, .row2.col24, .row3.col23, .row4.col22, .row5.col21 { -webkit-animation-delay: 1.30s; }
+/* 27 */
+.row0.col27, .row1.col26, .row2.col25, .row3.col24, .row4.col23, .row5.col22 { -webkit-animation-delay: 1.35s; }
+/* 28 */
+.row0.col28, .row1.col27, .row2.col26, .row3.col25, .row4.col24, .row5.col23 { -webkit-animation-delay: 1.45s; }
+/* 29 */
+.row0.col29, .row1.col28, .row2.col27, .row3.col26, .row4.col25, .row5.col24 { -webkit-animation-delay: 1.50s; }
+/* 30 */
+.row0.col30, .row1.col29, .row2.col28, .row3.col27, .row4.col26, .row5.col25 { -webkit-animation-delay: 1.55s; }
+/* 31 */
+.row0.col31, .row1.col30, .row2.col29, .row3.col28, .row4.col27, .row5.col26 { -webkit-animation-delay: 1.60s; }
+/* 32 */
+.row0.col32, .row1.col31, .row2.col30, .row3.col29, .row4.col28, .row5.col27 { -webkit-animation-delay: 1.65s; }
+/* 33 */
+.row0.col33, .row1.col32, .row2.col31, .row3.col30, .row4.col29, .row5.col28 { -webkit-animation-delay: 1.70s; }
+@-webkit-keyframes fadein {
+	from {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
